# CitricSheepChallenge

./: CMakeLists.txt  README.md  TODO.md  install_deps.sh  run.sh
include/: sha256.cpp  string_hex.cpp
src/: main.cpp
